@@ -1,3 +1,4 @@
+* Allow to export model and record name of Reference fields
 * Re-position buttons on Binary/Image widget
 * Improve treeview headers
 * Update states of both toolbar and menu
